syntax = "proto3";
option java_multiple_files = true;
package at.ac.fhcampuswien.se_booking.prototest; // TODO: adapt to correct package

service CurrencyConversion {
  rpc Convert (ConversionRequest) returns (ConversionResponse) {}
  rpc GetCurrencies (CurrencyRequest) returns (CurrencyResponse) {}
}


message ConversionRequest {
  string from_currency = 1;
  string to_currency = 2;
  double amount = 3;
}

message ConversionResponse {
  double amount = 3;
}

message CurrencyResponse {
  repeated Currency currencies = 1;
}

message CurrencyRequest {
}

message Currency {
  string name = 1;
}
